minio-operator/console-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console
  namespace: minio-operator
spec:
  tls:
  - hosts:
      - console.minio.lab.home
    secretName: minio-console-tls
  rules:
  - host: console.minio.lab.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: console
            port:
              number: 9090
